# multi-doc-chat

./: .gitignore  README.md  main2.py  pyproject.toml  requirements.txt  test.py
MultiDocChat/config/: config.yaml
MultiDocChat/prompts/: prompt_library.py
MultiDocChat/src/document_chat/: retriver.py
MultiDocChat/src/document_ingetion/: ingest.py
MultiDocChat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
faiss_base/session_20251113_103735_f75041e0/: index.pkl  ingested_meta.json
faiss_base/session_20251113_104446_f44383d6/: index.pkl  ingested_meta.json
faiss_base/session_20251113_104603_6a1fed0f/: index.faiss  index.pkl  ingested_meta.json
faiss_base/session_20251113_104745_89396a59/: index.faiss  index.pkl  ingested_meta.json
faiss_base/session_20251113_105142_5ee0ca73/: index.pkl  ingested_meta.json
faiss_base/session_20251113_105352_e1df07ed/: index.pkl  ingested_meta.json
faiss_base/session_20251113_105720_03fcb953/: index.pkl  ingested_meta.json
faiss_base/session_20251113_110039_44ecebfb/: index.pkl  ingested_meta.json
faiss_base/session_20251113_110514_8bfd568b/: index.pkl  ingested_meta.json
notebook/: domy.csv  evaluation.ipynb  rag.ipynb  rag_data.txt
static/: multidocchat-css.css
templates/: index.html  index2.html
test/: conftest.py
test/integration_test/: test_chat-route.py  test_upload_route.py
test/unit/: test_DataRetriever.py  test_dataIngetion.py
